updated to make information relative

--- a/index.html
+++ b/index.html
@@ -5,58 +5,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beachbotics - FIRST LEGO League</title>
     <style>
-        body {
+         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: rgb(255, 255, 255);
+            background: #ffffff;
+            line-height: 1.6;
         }
         header {
-            background: #2f67ff;
-            color: rgb(255, 255, 255);
+            background: #0e00d3;
+            color: white;
             padding: 1em;
             text-align: center;
         }
         .content {
             padding: 2em;
         }
-        .team-info, .competition-info, .cta {
-            margin: 2em 0;
+        h1, h2, h3 {
+            color: #ffffff;
         }
-        .team-info h2, .competition-info h2, .cta h2 {
-            color: #2f67ff;
-        }
-        .cta {
-            text-align: center;
-        }
-        .cta button {
-            background: #2f67ff;
-            color: rgb(255, 255, 255);
-            padding: 1em 2em;
-            border: none;
-            cursor: pointer;
-            font-size: 1.2em;
-        }
-        .cta button:hover {
-            background: #2f67ff;
+        section {
+            margin-bottom: 2em;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to Beachbotics!</h1>
-        <p>Our Journey in the FIRST LEGO League</p>
+        <h1>Beachbotics: Inspiring Innovation through FIRST LEGO League</h1>
     </header>
     <div class="content">
-        <section class="team-info">
-            <h2>About Beachbotics</h2>
-            <p>We are Beachbotics, a passionate team of young innovators and engineers. Our team is comprised of students who love building, programming, and competing in the exciting world of robotics. Our mission is to inspire and engage with STEM (Science, Technology, Engineering, and Mathematics) through hands-on experiences and teamwork.</p>
+        <section>
+            <h2>Introduction</h2>
+            <p>Beachbotics is a dynamic team of young innovators and engineers dedicated to exploring the fascinating world of robotics. We are participants in the FIRST LEGO League (FLL), a prestigious international competition that encourages students to engage with STEM (Science, Technology, Engineering, and Mathematics) through hands-on learning and teamwork. Our journey with Beachbotics is fueled by a passion for building, programming, and solving real-world problems through creative engineering solutions.</p>
         </section>
-        <section class="competition-info">
-            <h2>FIRST LEGO League Competition</h2>
-            <p>The FIRST LEGO League (FLL) is an international robotics competition that encourages children and teenagers to think like scientists and engineers. Each year, FLL releases a new challenge based on a real-world scientific topic. Teams must design, build, and program a robot using LEGO Mindstorms technology to complete tasks and score points on a themed playing field.</p>
+        <section>
+            <h2>Our Team</h2>
+            <p>Our team, Beachbotics, is comprised of students from diverse backgrounds who share a common enthusiasm for robotics and technology. We believe in the power of collaboration and the importance of fostering a supportive and inclusive environment where every team member can thrive. Our collective goal is to inspire one another and our community through our innovative projects and commitment to excellence.</p>
+            <h3>Team Members</h3>
+            <ul>
+                <li><strong>Mrs Blithe</strong> - Team Coach</li>
+                <li><strong>Gary Foote</strong> -  Team coach & Robot Builder</li>
+                <li><strong>Abigail Crossley</strong> -  Lead Innovation Specialist</li>
+                <li><strong>Gethin Preece</strong> - Lead Programmer & Robot Design Specialist</li>
+                <li><strong>Zack Leach-Winter</strong> -  Innovation Specialist</li>
+                <li><strong>Dylan Marks</strong> - Innovation Specialist & Creative Designer</li>
+                <li><strong>Megan MaCormick</strong> - Innovation Specialist & Creative Designer</li>
+                <li><strong>Charlie Littler</strong> - Lead Programmer & Innovation Specialist</li>
+            </ul>
         </section>
-        <section class="cta">
+        <section>
+            <h3>Partnerships</h3>
+            <p>Beachbotics has established partnerships with Haas, educational institutions, and other organizations that share our commitment to STEM education. These partnerships provide valuable resources and support, helping us to expand our reach and impact.</p>
+        </section>
+        <section>
+            <h2>Achievements</h2>
+            <p>Since our inception, Beachbotics has achieved numerous milestones. Our team has won awards for innovation, champion, and coach award at various competitions. These achievements reflect our dedication, hard work, and passion for robotics.</p>
+            <h3>Awards</h3>
+            <ul>
+                <li><strong>Innovative Solution Award</strong> - For our design that used kinetic energy powergenerator design.</li>
+                <li><strong>Best coach</strong> - For having the best coach ever Mrs Blithe.</li>
+                <li><strong>Champion award</strong> - For winning a regional competition.</li>
+            </ul>
+            <h3>Competitions</h3>
+            <p>Beachbotics has competed in several regional competitionn and A national FLL competitionn, consistently ranking among the top teams. Our success is a testament to our team's skill, creativity, and teamwork.</p>
+        </section>
+        <section>
+            <h2>Future Goals</h2>
+            <p>Looking ahead, Beachbotics is committed to continuing our journey of exploration and innovation. We aim to expand our projects, reach more students through our community initiatives, and achieve greater success in future competitions. Our ultimate goal is to inspire a love of STEM in others and make a positive impact on our world through innovative engineering solutions.</p>
+            <h3>Expansion Plans</h3>
+            <p>We plan to expand our team to include more members and mentor younger students interested in robotics. By fostering a culture of mentorship and learning, we hope to build a impactful program that continues to grow.</p>
+            <h3>Advanced Projects</h3>
+            <p>Beachbotics is excited to take on more advanced projects that push the boundaries of what is possible with robotics. We are exploring new technologies and methodologies to create even more innovative solutions.</p>
+        </section>
+        <section>
+            <h2>Conclusion</h2>
+            <p>Beachbotics is more than just a robotics team; we are a community of passionate learners and innovators dedicated to making a difference through STEM. Our journey in the FIRST LEGO League is just the beginning, and we are excited to see where our creativity and hard work will take us. We invite you to join us on this exciting adventure and support our mission to inspire the next generation of engineers and scientists.</p>
+        </section>
     </div>
 </body>
 </html>
