--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </section>
         <section id="season" class="section">
             <h2>This Season 2024-2025</h2>
-            <p>Beachbotics is more than just a robotics team; we are a community of passionate learners and innovators dedicated to making a difference through STEM. Our journey in the FIRST LEGO League is just the beginning, and we are excited to see where our creativity and hard work will take us. We invite you to join us on this exciting adventure and support our mission to inspire the next generation of engineers and scientists.</p>
+            <p>BeachBotics is diving into the Submerged season of the First LEGO League with a robust plan that highlights their growth and innovation. Over the years, they have honed their engineering skills, consistently improving their robot's efficiency, durability, and adaptability. This season, their robot features a new flatbed design that maximizes torque from the motors, enabling it to handle heavier loads and navigate more challenging underwater-themed tasks with precision. Alongside their impressive robotic upgrades, BeachBotics is pushing boundaries with their innovation project—a smart living seawall. Equipped with built-in temperature and pH sensors, this seawall is designed to monitor and support marine habitats, ensuring a balanced ecosystem while protecting coastal areas. Looking ahead, the team aims to adapt this concept for river water ecosystems, further expanding its impact. Their dedication to environmental solutions and technical excellence makes them a formidable presence this season.</p>
         </section>
         <section> </section>
     </div>
